修改对 ong.base jar包的依赖

--- a/transmission/.settings/org.eclipse.m2e.core.prefs
+++ b/transmission/.settings/org.eclipse.m2e.core.prefs
@@ -1,4 +1,4 @@
-activeProfiles=
+activeProfiles=D\:\\apache-maven-3.3.9\\conf\\setting.xml
 eclipse.preferences.version=1
-resolveWorkspaceProjects=true
+resolveWorkspaceProjects=false
 version=1
