--- a/transmission/.settings/org.eclipse.m2e.core.prefs
+++ b/transmission/.settings/org.eclipse.m2e.core.prefs
@@ -1,4 +1,4 @@
-activeProfiles=D\:\\apache-maven-3.3.9\\conf\\setting.xml
+activeProfiles=
 eclipse.preferences.version=1
 resolveWorkspaceProjects=false
 version=1
